# auto-py

./: AGENTS.md  README.md  main.py  pyproject.toml
docs/: CHECKPOINTING.md  PRD.md  REPAIR_AGENT_PRD.md
src/auto_py/: __init__.py  capture.py  checkpoint.py  repair.py  runner.py  validate.py
src/auto_py/llm/: __init__.py  config.py  factory.py  gateway.py  openai_compatible.py
src/auto_py/repair_agent/: __init__.py  context.py  loop.py  prompts.py  result.py
tests/: test_checkpoint.py  test_repair_agent.py
