[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-py"
version = "0.1.0"
description = "CLI scaffolding for runtime-assisted Python repair workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12,<1.0",
]

[project.scripts]
auto-py = "auto_py.runner:main"

[dependency-groups]
dev = [
    "pytest>=8,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/auto_py"]
